# elasticsearch-specification

./: .backportrc.json  .gitattributes  .gitignore  .npmignore  .spectral.yaml  .validation.json  CONTRIBUTING.md  LICENSE  Makefile  README.md  body-required-false.py  catalog-info.yaml  classes.json  diff-rest-api-spec.py  log  namespace-dependencies-compact.html  namespace-dependencies-expanded.html  overview.excali  overview.excalidraw  package-lock.json  package.json  report.md  run-validations.sh  t  tsconfig.json  update-defaults.py  update-enum-types.py  update-number-types.py  validation-example.md
.buildkite/: 0001-Fix-require_alias-use.patch  kibana.sh  kibana.yml
.ci/: Dockerfile  bump.sh  make.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  add-license-headers.sh  auto-label.json  auto-pr-context.md  check-license-headers.sh  labeler.yml
.github/ISSUE_TEMPLATE/: docs_feedback.yaml  feature.md  missing-type.md  question.md  wrong-type.md
.github/aw/: actions-lock.json
.github/download-artifacts/: action.yml  index.js  package-lock.json  package.json
.github/validate-pr/: README.md  compare-reports.js  index.js  package-lock.json  package.json  run-validation.js
.github/workflows/: backport.yml  check-backport-labels.yml  code-format.yml  compiler-rs.yml  compiler.test.yml  generate-report.yml  generate.yml  gh-pages-report.yml  kibana-spec-fix.lock.yml  kibana-spec-fix.md  kibana-spec-fix.yml  kibana-type-check-analysis.lock.yml  kibana-type-check-analysis.md  kibana-type-check-analysis.yml  labeler.yml  license.yml  lint.yml  linter.yml  metamodel-sync.yml  openapi-lint.yml  openapi-pr.yml  openapi-publish.yml  output-check.yml  publish-release-artifacts.yml  resolve-conflicts.yml  spec-drift.lock.yml  spec-drift.md  update-model-info.yml  update-rest-api-json.yml  validate-apis.yml  validate-pr.yml
api-design-guidelines/: README.md  data-modelling.md  naming.md  requests-responses.md
barebones-example/: index.js  package-lock.json  package.json
compiler/: .prettierignore  .prettierrc.json  check-node.js  compiler.ts  dangling-types-report.ts  generate-import-graph.mjs  index.ts  package-lock.json  package.json  run-validations.js  run-validations.mjs  tsconfig.json  update-imports.ts  validation-errors.ts
compiler-rs/: Cargo.toml  Makefile  README.md  rustfmt.toml
compiler-rs/clients_schema/: Cargo.toml
compiler-rs/clients_schema/src/: builtins.rs  lib.rs
compiler-rs/clients_schema/src/transform/: availability.rs  expand_generics.rs  mod.rs
compiler-rs/clients_schema_to_openapi/: .spectral.yaml  Cargo.toml  README.md  package-lock.json  package.json
compiler-rs/clients_schema_to_openapi/src/: cli.rs  components.rs  lib.rs  main.rs  paths.rs  schemas.rs  utils.rs
compiler-rs/clients_schema_to_rest_api_spec/: .gitignore  Cargo.toml
compiler-rs/clients_schema_to_rest_api_spec/src/: lib.rs  main.rs  spec.rs
compiler-rs/compiler-wasm-lib/: Cargo.toml
compiler-rs/compiler-wasm-lib/pkg/: compiler_wasm_lib.d.ts  compiler_wasm_lib.js  compiler_wasm_lib_bg.js  compiler_wasm_lib_bg.wasm  compiler_wasm_lib_bg.wasm.d.ts  package.json
compiler-rs/compiler-wasm-lib/src/: lib.rs
compiler-rs/openapi_to_clients_schema/: Cargo.toml
compiler-rs/openapi_to_clients_schema/fixtures/: kibana.serverless.yaml
compiler-rs/openapi_to_clients_schema/fixtures/tests/: enums.json  names.json  recursive-refs.json  scalars.json  structural-union.json  union-of-variants-external.json  union-of-variants-internal.json  xof.json
compiler-rs/openapi_to_clients_schema/src/: endpoints.rs  lib.rs  main.rs  openapi.rs  types.rs
compiler-rs/openapi_to_clients_schema/src/snapshots/: openapi_to_clients_schema__kibana_conversion.snap
compiler/lib/: compiler.js  dangling-types-report.js  index.js  update-imports.js  validation-errors.js
compiler/model/: build-model.ts  json-spec.ts  utils.ts  (+1 more)
csharp-generator/: enums.js  enums.ts  imports.js  imports.ts  index.js  index.ts  naming.js  naming.ts  package-lock.json  package.json  specs.js  specs.ts  tsconfig.json  types-union.js  types-union.ts  types-value.js  types-value.ts  types.js  types.ts
diff-schema/: package-lock.json  package.json
docs/: add-new-api.md  behaviors.md  compiler.md  doc-comments-guide.md  known-issues.md  modeling-guide.md  schema-structure.md  spec-drift-check.md  special-classes.md  specification-structure.md  style-guide.md  validation-example.md
es-scripts/: empty-params.py  empty-parts.py  format.py  lowercase-default-operator.py  remove-required.py  update-defaults.py
flight-recorder-generator/: flight-recorder-json-generator.d.ts  flight-recorder-json-generator.js  flight-recorder-json-generator.ts  index.js  index.ts  package-lock.json  package.json  tsconfig.json
java-generator/: enums.ts  imports.ts  index.ts  naming.ts  package-lock.json  package.json  specs.ts  tsconfig.json  types-parser-read.ts  types-parser-write.ts  types-union.ts  types-value.ts  types.ts
openapi-converter/: Cargo.toml  Makefile  README.md
openapi-converter/clients_schema_to_openapi/: .spectral.yaml  Cargo.toml  README.md  package-lock.json  package.json
openapi-converter/clients_schema_to_openapi/src/: components.rs  lib.rs  main.rs  paths.rs  schemas.rs  utils.rs
output/: doc-ids.csv  viewer.py
report/: namespace-dependencies.html
schema-to-spec/: runner.py  specification.json
specification/: .gitignore  .prettierignore  .prettierrc.json  eslint.config.js  package-lock.json  package.json  tsconfig.json  tslint.json
specs/: tsconfig.json
src/: domain.js  domain.ts  main.js  main.ts  nest-importer.js  nest-importer.ts  spec.js  spec.ts  tsconfig.json
swagger-generator/: index.js  index.ts  package-lock.json  package.json  swagger-ui.js  tsconfig.json  tslint.json  typings.json
typescript-generator/: client.js  client.ts  create-client.ts  index.js  index.ts  package-lock.json  package.json  tsconfig.json
typings/: main.d.ts
validator/: README.md  eslint-plugin-es-spec.js  eslint-plugin-es-spec.mjs  package-lock.json  package.json  single-key-dictionary-key-is-string.mjs
(+13434 files in other folders)
