[workspace]
resolver = "2"
members = [
    "clients_schema",
    "openapi_to_clients_schema",
    "clients_schema_to_openapi",
    "clients_schema_to_rest_api_spec",
    "compiler-wasm-lib",
]

[workspace.dependencies]
anyhow = "1"
arcstr = "1"
argh = "0.1"
clap = "4"
console_error_panic_hook = "0.1"
convert_case = "0.6"
derive_more = "1.0.0-beta.6"
either_n = "0.2"
http = "1"
icu_segmenter = "1"
indexmap = "2"
itertools = "0.14"
maplit = "1"
once_cell = "1.16"
openapiv3 = "2"
quantiles = "0.7"
serde = "1"
serde_ignored = "0.1"
serde_json = "1"
serde_path_to_error = "0.1"
serde_yml = "0.0.6"
testresult = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"

[profile.release]
lto = true
# Tell `rustc` to optimize for small code size.
opt-level = "s"
debug = true
