[package]
name = "clients_schema"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
derive_more = { version = "1.0.0-beta.6", features = ["from"] }
serde = { version = "1", features=["derive", 'rc']}
serde_json = "1.0"
typed-builder = "0.20"
once_cell = "1.16"
anyhow = "1.0"
indexmap = { version="2", features = ["serde"] }

arcstr = { version = "1", features = ["serde", "substr"] }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
serde_path_to_error = "0.1"
serde_ignored = "0.1"
testresult = "0.4"
