[package]
name = "clients_schema"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
derive_more = { workspace = true, features = ["from"] }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
once_cell = { workspace = true }
anyhow = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
itertools = { workspace = true }


arcstr = { workspace = true, features = ["serde", "substr"] }
clap = { workspace = true, features = ["derive"] }

[dev-dependencies]
serde_path_to_error = { workspace = true }
serde_ignored = { workspace = true }
testresult = { workspace = true }
