[package]
name = "clients_schema_to_openapi"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
clients_schema = {path="../clients_schema"}

serde = {version = "1", features=["derive"]}
serde_json = "1"
serde_path_to_error = "0.1"
serde_ignored = "0.1"
icu_segmenter = "1"
openapiv3 = "2"
anyhow = "1"
indexmap = "2"
convert_case = "0.6"
either_n = "0.2"
maplit = "1"

tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }


quantiles = "0.7"
