[package]
name = "clients_schema_to_openapi"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
clients_schema = {path="../clients_schema"}

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_path_to_error = { workspace = true }
serde_ignored = { workspace = true }
icu_segmenter = { workspace = true }
openapiv3 = { workspace = true }
anyhow = { workspace = true }
indexmap = { workspace = true }
convert_case = { workspace = true }
either_n = { workspace = true }
maplit = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true, features = ["derive"] }


quantiles = { workspace = true }
