[package]
name = "clients_schema_to_openapi"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
clients_schema = {path="../clients_schema"}

argh = { workspace = true }
derive_more = { version = "2", features = ["from_str"] }
serde_json = { workspace = true }
itertools = { workspace = true }
icu_segmenter = { workspace = true }
openapiv3 = { workspace = true }
anyhow = { workspace = true }
indexmap = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
