[package]
name = "compiler-wasm-lib"
version = "0.1.0"
edition = "2021"
description = "WASM library to manipulate and convert schema.json files"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.87"
clients_schema = {path="../clients_schema"}
clients_schema_to_openapi = {path="../clients_schema_to_openapi"}
serde_json = "1.0.107"
anyhow = "1.0.75"

console_error_panic_hook = { version = "0.1.7", optional = true }
web-sys = { version = "0.3.64", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Oz']

