[package]
name = "compiler-wasm-lib"
version = "0.1.0"
edition = "2021"
description = "WASM library to manipulate and convert schema.json files"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { workspace = true }
clients_schema = {path="../clients_schema"}
clients_schema_to_openapi = {path="../clients_schema_to_openapi"}
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = "0.1"
argh = { workspace = true }

console_error_panic_hook = { workspace = true, optional = true }
tracing-wasm = "0.2.1"

[dev-dependencies]
wasm-bindgen-test = { workspace = true }

[package.metadata.wasm-pack.profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
wasm-opt = ['-Oz']

