[package]
name = "openapi_to_clients_schema"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clients_schema = {path="../clients_schema"}

serde_json = { workspace = true }
serde_ignored = { workspace = true }
serde_yml = { workspace = true }
openapiv3 = { workspace = true }
anyhow = { workspace = true }
indexmap = { workspace = true }
convert_case = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Some json schema implementations
#boon = "0.3.1"
#jsonschema-transpiler = "1.10.0"
#serde_valid = "0.13.0"
#jsonschema-valid = "0.5.1"
#jsonschema = { version = "0.16.1", features=[]}
